making responsive for all devices

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     </div>
                     <div class="services_content">
                         <div>
-                            <i class="uil uil-arrow"></i>
+                            <i class="uil uil-arrow services_icon"></i>
                             <h3 class="services_title">FrontEnd <br> Development</h3>
                         </div>
                         <span class="button button-flex button-small button-link">
@@ -320,7 +320,7 @@
                     </div>
                     <div class="services_content">
                         <div>
-                            <i class="uil uil-arrow"></i>
+                            <i class="uil uil-arrow services_icon"></i>
                             <h3 class="services_title">BackEnd <br> Development</h3>
                         </div>
                         <span class="button button-flex button-small button-link">
@@ -330,7 +330,7 @@
                     </div>
                     <div class="services_content">
                         <div>
-                            <i class="uil uil-video"></i>
+                            <i class="uil uil-video services_icon"></i>
                             <h3 class="services_title">VideoGraphy</h3>
                         </div>
                         <span class="button button-flex button-small button-link">
@@ -340,7 +340,7 @@
                     </div>
                     <div class="services_content">
                         <div>
-                            <i class="uil uil-draggabledots"></i>
+                            <i class="uil uil-draggabledots services_icon"></i>
                             <h3 class="services_title">UI/UX Design</h3>
                         </div>
                         <span class="button button-flex button-small button-link">
@@ -350,7 +350,7 @@
                     </div>
                     <div class="services_content">
                         <div>
-                            <i class="uil uil-shopping-cart-alt"></i>
+                            <i class="uil uil-shopping-cart-alt services_icon"></i>
                             <h3 class="services_title">E-commerce <br> Development</h3>
                         </div>
                         <span class="button button-flex button-small button-link">
