update the html section

--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <footer class="footer">
             <div class="footer_bg">
                 <div class="footer_container container grid">
-                    <div>
+                    <div class="footer_content">
                         <h1 class="footer_title">Birat</h1>
                         <span class="footer_subtitle">Full-Stack Developer</span>
                     </div>
